# ml-cli

./: LICENSE  README.md  pyproject.toml
mlcli/: __init__.py  __main__.py
mlcli/driver/: __init__.py
mlcli/driver/commands/: __init__.py  info.py
tests/: test_mlcli.py
